--- a/css/styles.css
+++ b/css/styles.css
@@ -1,527 +1,406 @@
 @charset "utf-8";
-
 /* CSS Document */
 
-body,
-td,
-th,
-p {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
-  color: #333;
-  line-height: 1.5;
+body, td, th, p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    color: #333;
+    line-height: 1.5;
 }
-
 
 body {
-  background-color: #fdfdfd;
-  margin: 0;
-  position: relative;
+    background-color: #fdfdfd;
+    margin: 0;
+    position: relative;
 }
 
-
-ul,
-li {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
-  color: #333;
+ul, li {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    color: #333;
 }
-
 
 a {
-  color: orange;
-  text-decoration: none;
+    color: orange;
+    text-decoration: none;
 }
 
-
-a:hover,
-a:focus {
-  color: #3397db;
-  text-decoration: none;
+a:hover, a:focus {
+    color: #3397db;
+    text-decoration: none;
 }
-
 
 a img {
-  border: none 0px #fff;
+    border: none 0px #fff;
 }
 
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+h1, h2, h3, h4, h5, h6 {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 0 20px;
 }
 
-
-article,
-aside,
-canvas,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
+article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+    display: block;
 }
-
 
 #maincontent {
-  background-color: #f3f3f3;
-  min-height: 100%;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  position: relative;
+    background-color: #f3f3f3;
+    /* min-height: 100%; */
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-flow: row wrap; */
+    /* flex-direction: row; */
 }
-
 
 #footer {
-  background-color: #174375;
-  color: rgb(204, 204, 204);
-  font-size: 4pt;
-  letter-spacing: 1px;
-  padding: 2px;
-  text-align: center;
-  text-transform: uppercase;
+    background-color: #444;
+    color: #aaa;
+    font-size: 8pt;
+    letter-spacing: 1px;
+    padding: 25px;
+    text-align: center;
+    text-transform: uppercase;
 }
-
 
 /* ====================== Navigation ====================== */
-
 nav {
-  width: 100%;
-  height: 80px;
-  background-color: #252831;
-  text-align: center;
-  display: flex;
-  align-items: center;
+    width: 100%;
+    height: 80px;
+    background-color: #252831;
+    text-align: center;
+    margin: 0 auto;
 }
-
 
 nav h1 {
-  margin: auto;
-  padding: 25px 20px;
+    margin: auto;
+    height: 80px;
+    position: relative;
 }
-
 
 nav h1 a {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 200;
-  letter-spacing: 10px;
-  text-transform: uppercase;
-  padding-top: 20%;
+    color: #fff;
+    font-size: 14pt;
+    font-weight: 200;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+    margin: 0 auto;
+    text-align: center;
+    /* width:  100%; */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 20px;
 }
-
 
 #breadcrumb {
-  padding: 10px 40px 16px;
-  list-style: none;
-  background-color: #eee;
-  font-size: 17px;
-  margin: 0;
-  max-width: 100%;
+    padding: 10px 40px 16px;
+    list-style: none;
+    background-color: #eee;
+    font-size: 17px;
+    margin: 0;
+    width: calc(50% - 80px);
 }
-
 
 /* Display list items side by side */
-
 #breadcrumb li {
-  display: inline;
+    display: inline;
 }
-
 
 /* Add a slash symbol (/) before/behind each list item */
-
-#breadcrumb li+li:before {
-  padding: 8px;
-  color: black;
-  content: "/\00a0";
+#breadcrumb li + li:before {
+    padding: 8px;
+    color: black;
+    content: "/\00a0";
 }
-
 
 /* Add a color to all links inside the list */
-
 #breadcrumb li a {
-  color: #174375;
-  text-decoration: none;
+    color: #0275d8;
+    text-decoration: none;
 }
-
 
 /* Add a color on mouse-over */
-
 #breadcrumb li a:hover {
-  color: #01447e;
-  text-decoration: underline;
+    color: #01447e;
+    text-decoration: underline;
 }
-
 
 /* ====================== Map ====================== */
-
 #map {
-  height: 400px;
-  width: 100%;
-  background-color: #ccc;
-  text-align: center;
+    height: 400px;
+    width: 100%;
+    background-color: #ccc;
 }
-
-
-.map-aria-description {
-  display: none;
-}
-
 
 /* ====================== Restaurant Filtering ====================== */
-
 .filter-options {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-  height: 50px;
-  background-color: #174375;
-  align-items: center;
-  padding: 15px 0;
+    width: calc(100% - 10px);;
+    display: inline-block;
+    padding: 10px;
+    background-color: #901c1c;
+    align-items: center;
+    text-align: center;
 }
-
 
 .filter-options h2 {
-  color: white;
-  font-size: 1rem;
-  font-weight: normal;
-  line-height: 1;
-  margin: 0 20px;
+    color: white;
+    font-size: 1rem;
+    font-weight: normal;
+    line-height: 1;
+    margin: 0 20px;
+    /* margin-left: 100px; */
 }
-
-
-label {
-  visibility: hidden;
-}
-
 
 .filter-options select {
-  background-color: white;
-  border: 1px solid #fff;
-  font-family: Arial, sans-serif;
-  font-size: 11pt;
-  height: 35px;
-  letter-spacing: 0;
-  margin: 2px;
-  padding: 0 2px;
+    background-color: white;
+    border: 1px solid #fff;
+    font-family: Arial, sans-serif;
+    font-size: 11pt;
+    height: 35px;
+    letter-spacing: 0;
+    margin: 10px;
+    padding: 0 10px;
+    width: 200px;
 }
-
-
-.filter-label {
-  color: white;
-}
-
 
 /* ====================== Restaurant Listing ====================== */
-
 #restaurants-list {
-  background-color: #f3f3f3;
-  list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+    background-color: #fdfdfd;
+    list-style: outside none none;
+    margin: auto;
+    /* padding: 30px 15px 60px; */
+    text-align: center;
+    width: 100%;
+    padding-left: 0px;
+    /* display: inline-block; */
+    /* flex-wrap:  wrap; */
 }
-
 
 #restaurants-list li {
-  background-color: #fff;
-  border: 2px solid #ccc;
-  font-family: Arial, sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  min-width: 270px;
-  max-width: 300px;
+    background-color: #fff;
+    border: 2px solid #ccc;
+    font-family: Arial, sans-serif;
+    margin: 15px;
+    min-height: 380px;
+    padding: 0 30px 25px;
+    text-align: left;
+    width: 270px;
+    display: inline-block;
 }
-
 
 #restaurants-list .restaurant-img {
-  background-color: #ccc;
-  display: block;
-  margin: 0;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+    background-color: #ccc;
+    display: block;
+    margin: 0;
+    width: 100%;
+    max-width: 100%;
+    min-height: 248px;
+    min-width: 100%;
 }
 
-
-#restaurants-list li h1 {
-  color: #174375;
-  font-family: Arial, sans-serif;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  line-height: 1.3;
-  margin: 20px 0 10px;
-  text-transform: uppercase;
+#restaurants-list li h2 {
+    color: #f18200;
+    font-family: Arial, sans-serif;
+    font-size: 14pt;
+    font-weight: 200;
+    letter-spacing: 0;
+    line-height: 1.3;
+    margin: 20px 0 10px;
+    text-transform: uppercase;
 }
-
 
 #restaurants-list p {
-  margin: 0;
-  font-size: 11pt;
+    margin: 0;
+    font-size: 11pt;
 }
-
 
 #restaurants-list li a {
-  background-color: #174375;
-  border-bottom: 3px solid #eee;
-  color: #fff;
-  display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
+    background-color: orange;
+    border-bottom: 3px solid #eee;
+    color: #fff;
+    display: inline-block;
+    font-size: 10pt;
+    margin: 15px 0 0;
+    padding: 8px 30px 10px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
 }
-
 
 /* ====================== Restaurant Details ====================== */
-
 .inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
-
 
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+    background: blue none repeat scroll 0 0;
+    height: 33.3%;
+    /* position: fixed; */
+    right: 0;
+    top: 80px;
+    width: 100%;
+    order: -1;
 }
-
 
 .inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
+    background-color: #ccc;
+    /* height: 100%; */
+    width: 100%;
 }
-
 
 .inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 45%;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
 }
-
 
 #restaurant-name {
-  color: #174375;
-  font-family: Arial, sans-serif;
-  font-size: 12pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 30px 5px;
-  text-transform: uppercase;
-  line-height: 1.1;
-  height: 30px;
+    color: #f18200;
+    font-family: Arial, sans-serif;
+    font-size: 20pt;
+    font-weight: 200;
+    letter-spacing: 0;
+    margin: 15px 0 30px;
+    text-transform: uppercase;
+    line-height: 1.1;
 }
-
 
 #restaurant-img {
-  width: 90%;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
-
 
 #restaurant-address {
-  font-size: 18px;
-  font-weight: 700;
-  margin: 10px 0px;
+    font-size: 12pt;
+    margin: 10px 0px;
 }
-
 
 #restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
-  font-size: 12pt;
-  font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
-  text-align: center;
-  text-transform: uppercase;
-  width: 90%;
+    background-color: #333;
+    color: #ddd;
+    font-size: 12pt;
+    font-weight: 300;
+    letter-spacing: 10px;
+    margin: 0 0 20px;
+    padding: 2px 0;
+    text-align: center;
+    text-transform: uppercase;
+    width: 90%;
 }
 
+#restaurant-container, #reviews-container {
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #fff;
+    padding: 140px 40px 30px;
+    width: 30%;
+    padding-top: 0;
+    /* margin-left: auto; */
+    /* margin-right:  auto; */
+}
 
-#restaurant-container,
 #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 20px 30px;
-  width: 45%;
+    padding: 30px 40px 80px;
+    order:  2;
+    width: 50%;
 }
-
-
-#restaurant-container {
-  display: flex;
-  flex-direction: column;
-}
-
 
 #reviews-container h2 {
-  color: #174375;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+    color: #f58500;
+    font-size: 24pt;
+    font-weight: 300;
+    letter-spacing: -1px;
+    padding-bottom: 1pt;
 }
-
 
 #reviews-list {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
-
 
 #reviews-list li {
-  background-color: #fff;
-  border: 2px solid #f3f3f3;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  position: relative;
-  width: 85%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 0.5em;
+    background-color: #fff;
+    border: 2px solid #f3f3f3;
+    display: block;
+    list-style-type: none;
+    margin: 0 0 30px;
+    overflow: hidden;
+    padding: 0 20px 20px;
+    position: relative;
+    width: 85%;
 }
 
-
-#reviews-list li>p:nth-child(1) {
-  width: 50%;
-  font-weight: bolder;
-  align-self: center;
-  color: #174375;
+#reviews-list li p {
+    margin: 0 0 10px;
 }
-
-
-#reviews-list li>p:nth-child(2) {
-  align-self: center;
-  width: 50%;
-  font-weight: bolder;
-  text-align: right;
-  color: black
-}
-
-
-#reviews-list li>p:nth-child(3) {
-  width: 100%;
-  font-weight: bolder;
-  color: #174375;
-}
-
 
 #restaurant-hours td {
-  font-weight: bolder;
-  color: #666;
+    color: #666;
 }
 
 
-/* ====================== Responsive media queries ====================== */
-
-@media only screen and (max-width: 749px) {
-  #restaurants-list li {
-    max-width: 100%;
-  }
-  
-  .inside {
-    display: flex;
-    flex-direction: row;
-    width: 100vw
-  }
-
-  .inside header {
-    order: 0;
-    width: 100vw;
-  }
-
-  header {
-    display: flex;
-    flex-direction: column;
-  }
-
-    header nav {
-      order: 0;
+@media screen and (max-width: 450px){
+    #map-container {
+        width: 100%;
+        order: -1;
     }
 
-    header #breadcrumb {
-      order: 1;
-      width: 100vw;
-      padding-right: 0;
-      padding-left: 0;
-      text-align: center;
+    #reviews-container {
+        width: 100%;
     }
 
-  .inside #map-container {
-    top: 130px;
-    position: relative;
-    height: 300px;
-    width: 100vw;
-  }
+    #restaurant-container {
+        width: 100%;
+    }
 
-  .inside #restaurant-container {
-    position: relative;
-    width: 100vw;
-    padding: 140px 5px 0 0;
-    margin: auto;
-    text-align: center;
-  }
-
-  .inside #reviews-container {
-    width: 100vw;
-    padding: 5px;
-    margin: auto;
-  }
-
-  .inside #footer {
-    width: 100vw;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 10px;
-  }
-
-  #reviews-list {
-    width: 100vw;
-  }
-  
-  #reviews-container h2 {
-    text-align: center;
-  }
+    .filter-options select {
+        width: 60%;
+    }
 }
 
-@media only screen and (min-width: 750px) {
-  #restaurants-list li {
-    max-width: 45%;
-  }
+
+@media screen and (max-width: 270px)  {
+    #restaurants-list li {
+        width: 80%;
+    }
 }
 
-@media only screen and (min-width: 1000px) {
-  #restaurants-list li {
-    max-width: 300px;
-  }
+@media screen and (min-width: 450px) {
+    #map-container {
+        width: 100%;
+        order: -1;
+    }
+
+    #restaurant-container {
+        width: 100%;
+    }
+
+    #reviews-container {
+        width: 100%;
+    }
+
+}
+
+@media screen and (min-width: 900px) {
+    #map-container {
+        width: 100%;
+        order: -1;
+    }
+
+    #restaurant-container {
+        width: 30%;
+        /* order: 1; */
+    }
+
+    #reviews-container {
+        width: 50%;
+        order: 1;
+        margin-left: auto;
+        margin-right:  auto;
+    }
 }
