--- a/css/styles.css
+++ b/css/styles.css
@@ -1,406 +1,453 @@
 @charset "utf-8";
 /* CSS Document */
 
-body, td, th, p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10pt;
-    color: #333;
-    line-height: 1.5;
+/* ====================== General styles ====================== */
+
+* {
+	box-sizing: border-box;
+}
+
+body,td,th,p{
+	font-family: 'Merriweather', serif;
+	font-size: 0.8em;
+	font-weight: 200;
+	color: #373737;
+	line-height: 1.5;
 }
 
 body {
-    background-color: #fdfdfd;
-    margin: 0;
-    position: relative;
-}
-
-ul, li {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10pt;
-    color: #333;
+	background-color: #f8f8f8;
+	margin: 0;
+	position: relative;
+	overflow-x: hidden;
 }
 
 a {
-    color: orange;
-    text-decoration: none;
+	color: #e07800;
+	text-decoration: none;
 }
 
 a:hover, a:focus {
-    color: #3397db;
-    text-decoration: none;
+	color: #ff9800;
+	text-decoration: none;
 }
 
-a img {
-    border: none 0px #fff;
+a img{
+	border: none 0px #000000;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0 0 20px;
+	font-family: 'Merriweather', serif;
+	font-weight: 600;
 }
-
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-    display: block;
+	display: block;
 }
 
-#maincontent {
-    background-color: #f3f3f3;
-    /* min-height: 100%; */
-    display: flex;
-    flex-wrap: wrap;
-    /* flex-flow: row wrap; */
-    /* flex-direction: row; */
+.wrapper {
+	width: 100%;
+	margin: 0 auto;
 }
 
-#footer {
-    background-color: #444;
-    color: #aaa;
-    font-size: 8pt;
-    letter-spacing: 1px;
-    padding: 25px;
-    text-align: center;
-    text-transform: uppercase;
+/* ====================== Header ====================== */
+
+header {
+	height: 5em;
+	background-color: #e07800;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 99;
 }
 
-/* ====================== Navigation ====================== */
+/* Navigation */
+
 nav {
-    width: 100%;
-    height: 80px;
-    background-color: #252831;
-    text-align: center;
-    margin: 0 auto;
+	height: 100%;
+	text-align: center;
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: space-between;
 }
 
-nav h1 {
-    margin: auto;
-    height: 80px;
-    position: relative;
+.logo {
+	color: white;
 }
 
-nav h1 a {
-    color: #fff;
-    font-size: 14pt;
-    font-weight: 200;
-    letter-spacing: 10px;
-    text-transform: uppercase;
-    margin: 0 auto;
-    text-align: center;
-    /* width:  100%; */
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    padding: 20px;
+.logo a {
+	color: inherit;
+	display: inline-flex;
+	align-items: center;
+	padding: 0 1em;
+	height: 100%;
 }
 
-#breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
+.logo h1 {
+	font-size: 1.6em;
+	letter-spacing: 0.2em;
+	text-transform: uppercase;
+	margin: 0;
+	align-content: center;
 }
 
-/* Display list items side by side */
-#breadcrumb li {
-    display: inline;
+.logo:hover {
+	color: #ffdca7;
 }
 
-/* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li + li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
-}
+/* Restaurant Filtering */
 
-/* Add a color to all links inside the list */
-#breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
-}
-
-/* Add a color on mouse-over */
-#breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
-}
-
-/* ====================== Map ====================== */
-#map {
-    height: 400px;
-    width: 100%;
-    background-color: #ccc;
-}
-
-/* ====================== Restaurant Filtering ====================== */
 .filter-options {
-    width: calc(100% - 10px);;
-    display: inline-block;
-    padding: 10px;
-    background-color: #901c1c;
-    align-items: center;
-    text-align: center;
+	align-items: center;
+	display: inline-flex;
+	float: right;
+	padding-right: 1em;
 }
 
 .filter-options h2 {
-    color: white;
-    font-size: 1rem;
-    font-weight: normal;
-    line-height: 1;
-    margin: 0 20px;
-    /* margin-left: 100px; */
+	color: white;
+	font-size: 1.2em;
+	line-height: 1;
+	margin: 0.5em;
 }
 
 .filter-options select {
-    background-color: white;
-    border: 1px solid #fff;
-    font-family: Arial, sans-serif;
-    font-size: 11pt;
-    height: 35px;
-    letter-spacing: 0;
-    margin: 10px;
-    padding: 0 10px;
-    width: 200px;
+	background-color: #ff9800;
+	color: #683800;
+	font-family: 'Merriweather', serif;
+	font-size: 1em;
+	border: 1px solid #ff9800;
+	border-radius: 0.5em;
+	margin: 0 0.5em;
+	padding: 0.5em;
+	width: auto;
 }
 
-/* ====================== Restaurant Listing ====================== */
+
+/* ====================== Main ====================== */
+
+.main-content {
+	min-height: 100%;
+}
+
+.home main {
+	margin-top: 5em;
+}
+
+/* Map */
+
+#map {
+	height: 300px;
+	width: 100%;
+	z-index: 10;
+}
+
+/* Restaurant Listing */
+
 #restaurants-list {
-    background-color: #fdfdfd;
-    list-style: outside none none;
-    margin: auto;
-    /* padding: 30px 15px 60px; */
-    text-align: center;
-    width: 100%;
-    padding-left: 0px;
-    /* display: inline-block; */
-    /* flex-wrap:  wrap; */
+	background-color: #ffffff;
+	list-style: outside none none;
+	margin: 0;
+	padding: 2em;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 #restaurants-list li {
-    background-color: #fff;
-    border: 2px solid #ccc;
-    font-family: Arial, sans-serif;
-    margin: 15px;
-    min-height: 380px;
-    padding: 0 30px 25px;
-    text-align: left;
-    width: 270px;
-    display: inline-block;
-}
-
-#restaurants-list .restaurant-img {
-    background-color: #ccc;
-    display: block;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    min-height: 248px;
-    min-width: 100%;
-}
-
-#restaurants-list li h2 {
-    color: #f18200;
-    font-family: Arial, sans-serif;
-    font-size: 14pt;
-    font-weight: 200;
-    letter-spacing: 0;
-    line-height: 1.3;
-    margin: 20px 0 10px;
-    text-transform: uppercase;
-}
-
-#restaurants-list p {
-    margin: 0;
-    font-size: 11pt;
+	border: 1px solid #dcdcdc;
+	background-color: #f8f8f8;
+	margin: 0 0.8em 1.6em 0.8em;
+	padding: 0;
+	width: 270px;
+	border-radius: 0 2em 0 2em;
 }
 
 #restaurants-list li a {
-    background-color: orange;
-    border-bottom: 3px solid #eee;
-    color: #fff;
-    display: inline-block;
-    font-size: 10pt;
-    margin: 15px 0 0;
-    padding: 8px 30px 10px;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
+	display: inline-block;
+	text-transform: uppercase;
+}
+
+#restaurants-list li a:hover {
+	background-color: #fff;
+	border-radius: 0 0 0 2em;
+}
+#restaurants-list a:hover .restaurant-name {
+	color: #ff9800;
+}
+
+#restaurants-list .restaurant-img {
+	display: block;
+	margin: 0;
+	max-width: 100%;
+	min-width: 100%;
+	border-radius: 0 2em 0 0;
+}
+
+.restaurant-label {
+	padding: 1em 1.6em;
+	text-align: left;
+	border-radius: 0 0 0 2em;
+	color: #e07800;
+}
+
+#restaurants-list li h1 {
+	font-size: 1.2em;
+	font-weight: 400;
+	line-height: 1.3;
+	margin: 0.5em 0;
+	text-transform: uppercase;
+}
+
+#restaurants-list p {
+	margin: 0;
+	font-size: 0.8em;
+	font-family: 'Lato', sans-serif;
+}
+
+.restaurant-neighborhood {
+	font-weight: 600;
+}
+
+.restaurant-address {
+	font-weight: 400;
+	font-size: 0.9em;
+}
+
+hr {
+	border: none;
+	border-bottom: 0.05em solid #979797;
+	margin: 0.5em 0 1em 0;
+}
+
+.rating {
+	float: left;
+}
+
+.cuisine {
+	float: right;
+	margin: 0 0 1em 0;
 }
 
 /* ====================== Restaurant Details ====================== */
+
+.inside main {
+	margin-top: 3em;
+}
+
 .inside header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
+	height: 2.5em;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1000;
+	padding-left: 1em;
 }
 
-.inside #map-container {
-    background: blue none repeat scroll 0 0;
-    height: 33.3%;
-    /* position: fixed; */
-    right: 0;
-    top: 80px;
-    width: 100%;
-    order: -1;
+#maincontent {
+	min-height: 100%;
 }
 
-.inside #map {
-    background-color: #ccc;
-    /* height: 100%; */
-    width: 100%;
+.inside .wrapper {
+	width: 100%;
 }
 
-.inside #footer {
-    bottom: 0;
-    position: absolute;
-    width: 100%;
+.back {
+	color: white;
 }
+
+.back a {
+	color: inherit;
+	display: inline-flex;
+	align-items: center;
+	padding: 0 1em;
+	height: 100%;
+}
+
+.back h1 {
+	font-size: 1.6em;
+	letter-spacing: 0.2em;
+	text-transform: uppercase;
+	margin: 0;
+	align-content: center;
+}
+
+.logo:hover {
+	color: #ffdca7;
+}
+
+/* Restaurant Details Info */
 
 #restaurant-name {
-    color: #f18200;
-    font-family: Arial, sans-serif;
-    font-size: 20pt;
-    font-weight: 200;
-    letter-spacing: 0;
-    margin: 15px 0 30px;
-    text-transform: uppercase;
-    line-height: 1.1;
+	color: #e07800;
+	font-weight: 200;
+	letter-spacing: 0;
+	text-transform: uppercase;
+	line-height: 1.1;
 }
 
-#restaurant-img {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+#restaurant-neighborhood {
+	text-align: left;
+	line-height: 1.5;
+	color: #373737;
+	font-size: 0.8em;
+	font-family: 'Lato', sans-serif;
+	font-weight: 600;
+	text-transform: uppercase;
+	margin: 0;
 }
 
 #restaurant-address {
-    font-size: 12pt;
-    margin: 10px 0px;
+	text-align: left;
+	line-height: 1.5;
+	color: #373737;
+	font-size: 0.8em;
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	text-transform: uppercase;
+	margin: 0 0 1em 0;
 }
 
 #restaurant-cuisine {
-    background-color: #333;
-    color: #ddd;
-    font-size: 12pt;
-    font-weight: 300;
-    letter-spacing: 10px;
-    margin: 0 0 20px;
-    padding: 2px 0;
-    text-align: center;
-    text-transform: uppercase;
-    width: 90%;
+	margin: 0 0 1em;
+	text-align: left;
+	color: #e07800;
+	text-transform: uppercase;
+	float: left;
+}
+
+#restaurant-rating {
+	float: right;
+	color : #666;
+	font-size: 0.8em;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+#restaurant-img {
+	width: 100%;
+}
+
+.open-hours {
+	margin-top: 1em;
+}
+
+.open-hours h2 {
+	font-size: 1.2em;
+	margin: 0;
 }
 
 #restaurant-container, #reviews-container {
-    border-bottom: 1px solid #d9d9d9;
-    border-top: 1px solid #fff;
-    padding: 140px 40px 30px;
-    width: 30%;
-    padding-top: 0;
-    /* margin-left: auto; */
-    /* margin-right:  auto; */
+	border-bottom: 0.05em solid #979797;
+	padding: 1em 2em;
+	width: 50%;
 }
 
+/* Reviews Listing */
+
 #reviews-container {
-    padding: 30px 40px 80px;
-    order:  2;
-    width: 50%;
+	background-color: white;
 }
 
 #reviews-container h2 {
-    color: #f58500;
-    font-size: 24pt;
-    font-weight: 300;
-    letter-spacing: -1px;
-    padding-bottom: 1pt;
+	font-size: 1.2em;
 }
 
 #reviews-list {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 #reviews-list li {
-    background-color: #fff;
-    border: 2px solid #f3f3f3;
-    display: block;
-    list-style-type: none;
-    margin: 0 0 30px;
-    overflow: hidden;
-    padding: 0 20px 20px;
-    position: relative;
-    width: 85%;
+	display: block;
+	list-style-type: none;
+	margin: 0 0 2em;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+	border-bottom: 0.05em solid #979797;
 }
 
 #reviews-list li p {
-    margin: 0 0 10px;
+	margin: 0 0 10px;
+	display: block;
 }
 
 #restaurant-hours td {
-    color: #666;
+	color: #666;
 }
 
-
-@media screen and (max-width: 450px){
-    #map-container {
-        width: 100%;
-        order: -1;
-    }
-
-    #reviews-container {
-        width: 100%;
-    }
-
-    #restaurant-container {
-        width: 100%;
-    }
-
-    .filter-options select {
-        width: 60%;
-    }
+#restaurant-hours tr td:first-of-type {
+    font-weight: 600;
+		padding-right: 2em;
 }
 
-
-@media screen and (max-width: 270px)  {
-    #restaurants-list li {
-        width: 80%;
-    }
+.review-heading {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+	align-items: flex-end;
 }
 
-@media screen and (min-width: 450px) {
-    #map-container {
-        width: 100%;
-        order: -1;
-    }
-
-    #restaurant-container {
-        width: 100%;
-    }
-
-    #reviews-container {
-        width: 100%;
-    }
-
+.review-heading .name {
+	margin: 0 0 1em;
+	text-align: left;
+	font-size: 1.2em;
+	color: #e07800;
+	text-transform: uppercase;
 }
 
-@media screen and (min-width: 900px) {
-    #map-container {
-        width: 100%;
-        order: -1;
-    }
+.review-heading .date {
+  font-size: 0.8em;
+  color: #373737;
+  font-weight: 300;
+}
 
-    #restaurant-container {
-        width: 30%;
-        /* order: 1; */
-    }
+#reviews-list .rating {
+  font-size: 0.8em;
+  display: inline-block;
+	text-transform: uppercase;
+	font-weight: 600;
+	width: 100%;
+}
 
-    #reviews-container {
-        width: 50%;
-        order: 1;
-        margin-left: auto;
-        margin-right:  auto;
-    }
+#reviews-list .comment {
+  margin-bottom: 2em;
+}
+
+/* Map */
+
+.inside #map-container {
+	background: white none repeat scroll 0 0;
+	height: 100%;
+	position: fixed;
+	right: 0;
+	top: 2.5em;
+	width: 50%;
+	z-index: 10;
+}
+
+.inside #map {
+	background-color: white;
+	height: calc(100vh - 3em);
+	width: 100%;
+	margin: 0;
+}
+
+/* ====================== Footer ====================== */
+
+#footer {
+	background-color: #f8f8f8;
+	color: #683800;
+	font-size: 8pt;
+	letter-spacing: 1px;
+	padding: 25px;
+	text-align: center;
+}
+
+.inside #footer {
+	font-size: 8pt;
+	bottom: 0;
+	position: absolute;
+	width: 50%;
 }
