--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ span {
 	font-family: "Barlow Condensed", sans-serif;
 	font-weight: 400;
 	font-size: 20px;
-	
+	color: #333;
 	line-height: 1.5;
 }
 body {
@@ -83,7 +83,7 @@ header {
 }
 
 #maincontent {
-  background-color:;
+  background-color: #1833ab;
   min-height: 100%;
 }
 #footer {
@@ -211,7 +211,7 @@ nav {
 }
 
 #restaurants-list .restaurant-img {
-  background-color: black;
+  background-color: #ccc;
   display: block;
   margin: 0;
 	max-width: 100%;
@@ -255,7 +255,7 @@ nav {
 }
 
 #restaurants-list li a {
-  color: black;
+  color: #fff;
   display: inline-block;
   text-align: left;
   text-decoration: none;
@@ -265,7 +265,7 @@ nav {
 	background-color: #fff;
 }
 #restaurants-list a:hover .restaurant-name {
-  color: #;
+  color: #ed1E79;
 }
 
 
@@ -284,20 +284,20 @@ nav {
 	background-color: #0c4;
 }
 .pizza {
-	
+	background-color: #000000;
 }
 
 .asian-color {
-	
+	color: #000000;
 }
 .american-color {
-	
+	color: #000000;
 }
 .mexican-color {
-	
+	color: #000000;
 }
 .pizza-color {
-	color: #f93;
+	color: #000000;
 }
 
 
@@ -344,7 +344,7 @@ nav {
 }
 #restaurant-container h2,
 #reviews-container h2 {
-  
+  color: #333;
   text-transform: uppercase;
 }
 
@@ -364,7 +364,7 @@ nav {
   text-transform: uppercase;
 }
 .inside .rating {
- 
+  color: #1833ab;
   padding: 0.1em 0.4em;
   margin: 0.5em 0;
   border-radius: 0.5em;
@@ -422,7 +422,7 @@ nav {
 #restaurant-hours td {
   font-weight: 400;
   font-size: 0.8em;
-  
+  color: #333;
   padding-right: 1em;
 }
 #restaurant-hours tr td:first-of-type {
@@ -470,7 +470,7 @@ nav {
 }
 .review-heading .date {
   font-size: 0.8em;
-  color: #333;
+  color: #000000;
   font-weight: 300;
 }
 
@@ -478,7 +478,7 @@ nav {
 #reviews-list .rating {
   font-size: 0.8em;
   display: inline-block;
-  color: #fff;
+  color: #000000;
   background-color: #999;
 }
 #reviews-list .comment {
