--- a/css/styles.css
+++ b/css/styles.css
@@ -284,20 +284,20 @@ nav {
 	background-color: #0c4;
 }
 .pizza {
-	background-color: #000000;
+	background-color: #f93;
 }
 
 .asian-color {
-	color: #000000;
+	color: #f53;
 }
 .american-color {
-	color: #000000;
+	color: #0cf;
 }
 .mexican-color {
-	color: #000000;
+	color: #0c4;
 }
 .pizza-color {
-	color: #000000;
+	color: #f93;
 }
 
 
@@ -470,7 +470,7 @@ nav {
 }
 .review-heading .date {
   font-size: 0.8em;
-  color: #000000;
+  color: #333;
   font-weight: 300;
 }
 
@@ -478,7 +478,7 @@ nav {
 #reviews-list .rating {
   font-size: 0.8em;
   display: inline-block;
-  color: #000000;
+  color: #fff;
   background-color: #999;
 }
 #reviews-list .comment {
